--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						
 						<hr/>
 
-						<span class="title">Netwerk Difficulties</span>
+						<span class="title">Networking Difficulties</span>
 						<p>A lot of our nodes in Roubaix are having network- difficulties. We are closely monitoring this. Seeing as this is an issue on multiple racks, we expect this to be an error on OVH's end. As so, we expect it to work by the morning.</p>
 						
 					</div>
